# si360-2024-codes

./: README.md
hw2/culane_to_bag/: README.md  package.xml  setup.cfg  setup.py
hw2/culane_to_bag/culane_to_bag/: convert.py
hw2/lane_detection_msgs/: CMakeLists.txt  package.xml
hw2/lane_detection_msgs/msg/: DetectionResult.msg  DetectionTarget.msg  Lane.msg
hw2/lane_detection_starter_cpp/: CMakeLists.txt  README.md  package.xml
hw2/lane_detection_starter_cpp/src/: detector.cpp
hw2/lane_detection_starter_py/: package.xml  setup.cfg  setup.py
hw2/lane_detection_starter_py/lane_detection_starter_py/: detector.py
hw3/: README.md
hw3/kitti2rosbag/: README.md  package.xml  setup.cfg  setup.py
hw3/kitti2rosbag/kitti2rosbag/: all_converter.py  camera_converter.py  lidar_converter.py
hw3/kitti2rosbag/scripts/: repair_png.sh
