<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kitti2rosbag</name>
  <version>0.0.0</version>
  <description>Convert Kitti dataset to ros2 bag</description>
  <maintainer email="dengqi935@outlook.com">dengqi</maintainer>
  <license>MIT</license>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
